--- a/Ch04Ex1MovieList/appsettings.json
+++ b/Ch04Ex1MovieList/appsettings.json
@@ -6,4 +6,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "MovieContet": "Server=(localdb)\\mssqllocaldb;Database=MovieesExercise;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
