--- a/Ch04Ex1MovieList/appsettings.json
+++ b/Ch04Ex1MovieList/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "MovieContet": "Server=(localdb)\\mssqllocaldb;Database=MovieesExercise;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
